# RTK-Web-API-CLI

./: .gitignore  CHANGELOG.md  README.md  config.toml  data-dump.py  pyproject.toml  raidclient.py  raidctl.py
game-data/: artifact-sets.json  artifact-stats.json  artifact-types.json  factions.json
json-data/: account.json  accounts.json  artifacts.json
src/: utils.py
src/account/: accounts.py
src/artifact/: artifacts.py
src/game/: game.py
src/mockraidtoolkit/: account_api.py  local_api_client.py  mock_raid_toolkit.py  static_data_api.py
src/model/: account.py  artifact.py  artifact_bonus.py  artifact_set.py  artifact_stat.py  artifact_type.py  faction.py  game_data.py  user_avatar_id.py
src/service/: rtk_web_api.py
