[tool.poetry]
name = "raid-helper"
version = "0.1.0"
description = "Raid Helper playgrounds"
authors = ["Ales Loncar <ales.loncar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Pygments = "2.13.0"
click = "8.1.3"
tabulate = "0.9.0"
raidtoolkit = "0.1.0"
websocket-client = "1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
